[package]
name = "sudoku_solver"
description = "Sudoku solvers by rediscovering rust programming"
authors = ["Ivan Imbert"]
repository = "https://github.com/goblivend/sudokuSolvers"

version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }

[dev-dependencies]
criterion = "0.4"

[profile.release]
opt-level = 3 # default
lto = true
codegen-units = 1
panic = "abort"
strip = false
debug = true

[[bench]]
name = "backtrack"
harness = false

[[bench]]
name = "proceduralv1"
harness = false

[[bench]]
name = "proceduralv2"
harness = false

[[bench]]
name = "proceduralv3"
harness = false

[[bench]]
name = "proceduralv4"
harness = false

[[bench]]
name = "proceduralv5"
harness = false

[[bench]]
name = "proceduralv6"
harness = false

[[bench]]
name = "proceduralv7"
harness = false
